- added parallel consumer by confluent - upgraded spring boot and other dependencies